# MLACO_binpack

./: .gitignore  CMakeLists.txt  analyze_plot.ipynb  conflict_generator.py  svm.param  train_svm.py
data/: test.bpa  test.sol  u1000_00_0.bpa  u1000_00_1.bpa  u1000_00_2.bpa  u1000_00_3.bpa  u1000_00_4.bpa  u1000_00_5.bpa  u1000_00_6.bpa  u1000_00_7.bpa  u1000_00_8.bpa  u1000_00_9.bpa  u100_00.sol  u100_00_0.bpa  u100_00_0.sol  u100_00_1.bpa  u100_00_1.sol  u100_00_2.bpa  u100_00_2.sol  u100_00_3.bpa  u100_00_3.sol  u100_00_4.bpa  u100_00_4.sol  u100_00_5.bpa  u100_00_5.sol  u100_00_6.bpa  u100_00_6.sol  u100_00_7.bpa  u100_00_7.sol  u100_00_8.bpa  u100_00_8.sol  u100_00_9.bpa  u100_00_9.sol  u10_00.bpa  u10_00.sol  u10_00_0.bpa  u10_00_0.sol  u10_00_1.bpa  u10_00_2.bpa  u10_00_3.bpa  (+95 more)
results/dynamic/seed_1/: u100_00_0_cg_stats.csv  u100_00_0_solving_stats.csv  u10_00_0_cg_stats.csv  u10_00_0_solving_stats.csv  u10_00_1_cg_stats.csv  u10_00_1_solving_stats.csv  u120_00_0_cg_stats.csv  u120_00_0_solving_stats.csv  u120_00_1_cg_stats.csv  u120_00_1_solving_stats.csv  u120_00_2_cg_stats.csv  (+64 more)
small_sample_question/: MP1.lp  MP2.lp  binpack_cg.ipynb  binpack_dataset_generator.ipynb  knapsack  knapsack.cpp
src/: ACO.cpp  ACO.h  MLBIN.cpp  MLBIN.h  cg.cpp  cg.h  instance.cpp  instance.h  knapsack_solver.cpp  knapsack_solver.h  knapscak_solver.cpp  main.cpp  mlaco.cpp  mlaco.h  mlmmas.cpp  mlmmas.h  pricer.cpp  pricer.h  svm.param  training.cpp  training.h
src/svm/: svm_train_model.c
tools/: analyze_plot.ipynb
train_data/: svm_train_model  train_data.txt
(+108 files in other folders)
